Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5073

Potential race condition during background fetch of metadata

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • 2.0-beta
    • XDCR
    • Security Level: Public
    • None

    Description

      While the bgfetch of a non-resident/non-existent key is underway, there might be intervening mutations to the key in memory. In such a case we must not restore the metadata of the key. Using a CAS value from the time when the temporary item is first created and checking against it before restoring the metadata prevents such races.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srinivas Srinivas Vadlamani (Inactive)
            srinivas Srinivas Vadlamani (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty