[MB-5073] Check whether temp item is clean before restoreMeta()

While the bgfetch of a non-resident/non-existent key is underway,
there might be intervening mutations to the key in memory. In such a
case we must not restore the metadata of the key. We verify this by
checking whether the temp item is still clean.

Change-Id: Id5447af8ed5a78b03068eabb6a596c87634386f0
Reviewed-on: http://review.couchbase.org/14830
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>